p2/confs/service.app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app1
spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
