p2/confs/service.app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app2
spec:
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
