p2/confs/service.app3.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app3
spec:
  selector:
    app: app3
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
