p2/confs/ingress.all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-all
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-app1
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-app2
            port:
              number: 80
  # Default route to app3
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-app3
            port:
              number: 80
